--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,33 @@
 Package: catchment
 Type: Package
-Title: What the Package Does (Title Case)
-Version: 0.1.0
-Author: Who wrote it
-Maintainer: The package maintainer <yourself@somewhere.net>
-Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
+Title: Weighted Spatial Point Catchment Modelling
+Version: 0.0.0.9000
+Authors@R: 
+    person("Justin", "Millar", , "jmillar@path.org", role = c("aut", "cre"))
+Description: Create gravity-style catchment model for spatial point data, using individual weights and rasterized gridded data. 
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
+RoxygenNote: 7.1.2
+Imports: 
+    doSNOW,
+    foreach,
+    fs,
+    gdistance,
+    magrittr,
+    Matrix,
+    parallel,
+    progress,
+    raster,
+    Rcpp,
+    snow,
+    sp,
+    TMB
+LinkingTo: 
+    TMB,
+    Rcpp,
+    RcppEigen
+Suggests: 
+    INLA
+URL: https://github.com/PATH-Global-Health/catchment
+BugReports: https://github.com/PATH-Global-Health/catchment/issues
