--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(create_travel_surface)
 export(initial_access_surface)
 export(make_model_object)
 export(prepare_data)
+export(shift_coord)
 export(travel_mat_from_folder)
 import(progress)
 importFrom(INLA,inla.mesh.2d)
