--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,7 +8,7 @@ Description: Create gravity-style catchment model for spatial point data, using 
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
-RoxygenNote: 7.1.2
+RoxygenNote: 7.2.1
 Imports: 
     doSNOW,
     dplyr,
@@ -32,3 +32,5 @@ LinkingTo:
     RcppEigen
 URL: https://github.com/PATH-Global-Health/catchment
 BugReports: https://github.com/PATH-Global-Health/catchment/issues
+Depends: 
+    R (>= 2.10)
