--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -34,3 +34,7 @@ URL: https://github.com/PATH-Global-Health/catchment
 BugReports: https://github.com/PATH-Global-Health/catchment/issues
 Depends: 
     R (>= 2.10)
+Suggests: 
+    knitr,
+    rmarkdown
+VignetteBuilder: knitr
