--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(build_mesh)
 export(catchment_model)
 export(catchment_populations)
 export(create_travel_surface)
+export(get_prob_raster)
 export(initial_access_surface)
 export(make_model_object)
 export(prepare_data)
@@ -29,6 +30,7 @@ importFrom(raster,extent)
 importFrom(raster,getValues)
 importFrom(raster,projectRaster)
 importFrom(raster,raster)
+importFrom(raster,values)
 importFrom(raster,writeRaster)
 importFrom(snow,makeSOCKcluster)
 importFrom(snow,stopCluster)
